product-developer/modules/service-catalog/template.yaml
AWSTemplateFormatVersion: '2010-09-09'

Parameters:
  ProductName:
    Type: String
    Description: Tag name used to identify your project/product
  ProductId:
    Type: String
    Description: ID used to identify your project/product
  ProductVersion:
    Type: String
    Description: Version number of your project/product
  CidrBlock:
    Description: The CIDR block for the VPC - Default is 10.0.0.0/16
    Type: String
    Default: 10.0.0.0/16
  PublicSubnet1Cidr:
    Description: The CIDR block for the first public subnet - Default is 10.0.1.0/24
    Type: String
    Default: 10.0.1.0/24
  PublicSubnet2Cidr:
    Description: The CIDR block for the second public subnet - Default is 10.0.2.0/24
    Type: String
    Default: 10.0.2.0/24
  PrivateSubnet1Cidr:
    Description: The CIDR block for the first private subnet - Default is 10.0.3.0/24
    Type: String
    Default: 10.0.3.0/24
  PrivateSubnet2Cidr:
    Description: The CIDR block for the second private subnet - Default is 10.0.4.0/24
    Type: String
    Default: 10.0.4.0/24

Resources:
  VPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: !Ref CidrBlock
      EnableDnsSupport: true
      EnableDnsHostnames: true
      Tags:
        - Key: product_name
          Value: !Ref ProductName
        - Key: product_id
          Value: !Ref ProductId
        - Key: product_version
          Value: !Ref ProductVersion

  PublicSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      CidrBlock: !Ref PublicSubnet1Cidr
      AvailabilityZone: !Select [0, !GetAZs ]
      Tags:
        - Key: product_name
          Value: !Ref ProductName
        - Key: product_id
          Value: !Ref ProductId
        - Key: product_version
          Value: !Ref ProductVersion
          
  PublicSubnet2:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      CidrBlock: !Ref PublicSubnet2Cidr
      AvailabilityZone: !Select [1, !GetAZs ]
      Tags:
        - Key: product_name
          Value: !Ref ProductName
        - Key: product_id
          Value: !Ref ProductId
        - Key: product_version
          Value: !Ref ProductVersion

  PrivateSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      CidrBlock: !Ref PrivateSubnet1Cidr
      AvailabilityZone: !Select [0, !GetAZs ]
      Tags:
        - Key: product_name
          Value: !Ref ProductName
        - Key: product_id
          Value: !Ref ProductId
        - Key: product_version
          Value: !Ref ProductVersion

  PrivateSubnet2:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      CidrBlock: !Ref PrivateSubnet2Cidr
      AvailabilityZone: !Select [1, !GetAZs ]
      Tags:
        - Key: product_name
          Value: !Ref ProductName
        - Key: product_id
          Value: !Ref ProductId
        - Key: product_version
          Value: !Ref ProductVersion

  PublicRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
      Tags:
        -  Key: product_name
           Value: !Ref ProductName
        -  Key: product_id
           Value: !Ref ProductId
        -  Key: product_version
           Value: !Ref ProductVersion

  PrivateRouteTable1:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
      Tags:
        -  Key: product_name
           Value: !Ref ProductName
        -  Key: product_id
           Value: !Ref ProductId
        -  Key: product_version
           Value: !Ref ProductVersion

  PrivateRouteTable2:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
      Tags:
        -  Key: product_name
           Value: !Ref ProductName
        -  Key: product_id
           Value: !Ref ProductId
        -  Key: product_version
           Value: !Ref ProductVersion

  PublicRouteTableAssociation1:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PublicSubnet1
      RouteTableId: !Ref PublicRouteTable

  PublicRouteTableAssociation2:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PublicSubnet2
      RouteTableId: !Ref PublicRouteTable

  PrivateRouteTableAssociation1:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PrivateSubnet1
      RouteTableId: !Ref PrivateRouteTable1

  PrivateRouteTableAssociation2:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PrivateSubnet2
      RouteTableId: !Ref PrivateRouteTable2

  PublicNACL:
    Type: AWS::EC2::NetworkAcl
    Properties:
        VpcId: !Ref VPC
        Tags:
            - Key: product_name
              Value: !Ref ProductName
            - Key: product_id
              Value: !Ref ProductId
            - Key: product_version
              Value: !Ref ProductVersion

  PrivateNACL:
    Type: AWS::EC2::NetworkAcl
    Properties:
        VpcId: !Ref VPC
        Tags:
            - Key: product_name
              Value: !Ref ProductName
            - Key: product_id
              Value: !Ref ProductId
            - Key: product_version
              Value: !Ref ProductVersion

  PublicNACLAssociation1:
    Type: AWS::EC2::SubnetNetworkAclAssociation
    Properties:
      SubnetId: !Ref PublicSubnet1
      NetworkAclId: !Ref PublicNACL

  PublicNACLAssociation2:
    Type: AWS::EC2::SubnetNetworkAclAssociation
    Properties:
      SubnetId: !Ref PublicSubnet2
      NetworkAclId: !Ref PublicNACL

  PrivateNACLAssociation1:
    Type: AWS::EC2::SubnetNetworkAclAssociation
    Properties:
      SubnetId: !Ref PrivateSubnet1
      NetworkAclId: !Ref PrivateNACL

  PrivateNACLAssociation2:
    Type: AWS::EC2::SubnetNetworkAclAssociation
    Properties:
      SubnetId: !Ref PrivateSubnet2
      NetworkAclId: !Ref PrivateNACL

  InternetGateway:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: product_name
          Value: !Ref ProductName
        - Key: product_id
          Value: !Ref ProductId
        - Key: product_version
          Value: !Ref ProductVersion

  InternetGatewayAttachment:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId: !Ref VPC
      InternetGatewayId: !Ref InternetGateway

  PublicRouteToInternetGateway:
    Type: AWS::EC2::Route
    DependsOn: InternetGatewayAttachment
    Properties:
      RouteTableId: !Ref PublicRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGateway

  NatGateway1:
    Type: AWS::EC2::NatGateway
    Properties:
      AllocationId: !GetAtt [EIP1, AllocationId]
      SubnetId: !Ref PublicSubnet1

  NatGateway2:
    Type: AWS::EC2::NatGateway
    Properties:
      AllocationId: !GetAtt [EIP2, AllocationId]
      SubnetId: !Ref PublicSubnet2

  PrivateRouteToNatGateway1:
    Type: AWS::EC2::Route
    DependsOn: NatGateway1
    Properties:
      RouteTableId: !Ref PrivateRouteTable1
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref NatGateway1

  PrivateRouteToNatGateway2:
    Type: AWS::EC2::Route
    DependsOn: NatGateway2
    Properties:
      RouteTableId: !Ref PrivateRouteTable2
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref NatGateway2

  EIP1:
    Type: AWS::EC2::EIP
    Properties:
      Domain: vpc

  EIP2:
    Type: AWS::EC2::EIP
    Properties:
      Domain: vpc

Outputs:
  VPC:
    Description: VPC Identifier
    Value: !Ref VPC
  PublicSubnet1:
    Description: Public Subnet 1 Identifier
    Value: !Ref PublicSubnet1
  PublicSubnet2:
    Description: Public Subnet 2 Identifier
    Value: !Ref PublicSubnet2
  PrivateSubnet1:
    Description: Private Subnet 1 Identifier
    Value: !Ref PrivateSubnet1
  PrivateSubnet2:
    Description: Private Subnet 2 Identifier
    Value: !Ref PrivateSubnet2
  PublicRouteTable:
    Description: Public Route Table Identifier
    Value: !Ref PublicRouteTable
  PrivateRouteTable1:
    Description: Private Route Table 1 Identifier
    Value: !Ref PrivateRouteTable1
  PrivateRouteTable2:
    Description: Private Route Table 2 Identifier
    Value: !Ref PrivateRouteTable2
  PublicNACL:
    Description: Public NACL Identifier
    Value: !Ref PublicNACL
  PrivateNACL:
    Description: Private NACL Identifier
    Value: !Ref PrivateNACL
  InternetGateway:
    Description: InternetGateway Identifier
    Value: !Ref InternetGateway
  NatGateway1:
    Description: NatGateway1 Identifier
    Value: !Ref NatGateway1
  NatGateway2:
    Description: NatGateway2 Identifier
    Value: !Ref NatGateway2
  EIP1:
    Description: EIP1 Identifier
    Value: !Ref EIP1
  EIP2:
    Description: EIP2 Identifier
    Value: !Ref EIP2
